--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
+    "@mui/x-date-pickers": "^6.0.3",
+    "dayjs": "^1.11.7",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
