--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.14",
     "@mui/x-date-pickers": "^6.0.3",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
