--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.14",
+    "@mui/x-data-grid": "^6.0.4",
     "@mui/x-date-pickers": "^6.0.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
